...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YP White"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="center" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfP-5N-UaD" userLabel="LikeButton">
                                                    <rect key="frame" x="309" y="4" width="68" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="44" id="14b-NM-Kv6"/>
                                                        <constraint firstAttribute="height" constant="44" id="9Ru-eG-wGM"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="Active"/>
...
                                <viewLayoutGuide key="contentLayoutGuide" id="GQ3-Qr-Bwf"/>
                                <viewLayoutGuide key="frameLayoutGuide" id="Uxg-4x-hfd"/>
                                <connections>
                                    <outlet property="delegate" destination="yco-rr-xhw" id="7Gl-wK-1vh"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DhS-OD-L0R" userLabel="BackwardButton">
                                <rect key="frame" x="4" y="63" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackwardButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="ch2-9m-fUd"/>
                                </constraints>
                                <state key="normal" title="Button"/>
...
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="TVa-d0-dCl"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" name="YP Black"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="boolean" keyPath="masksToBounds" value="YES"/>
                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                        <integer key="value" value="16"/>
...
